H3CIPMSJAVA-20180830/src/objects/T_M_Parts__c.object
<CustomObject>
    <fields>
        <fullName>PartNo__c</fullName>
        <description>product related number</description>
        <label>PartNo</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_M__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>T&amp;M</label>
        <referenceTo>T_M__c</referenceTo>
        <relationshipLabel>T&amp;M Parts</relationshipLabel>
        <relationshipName>T_M_PartslookuptoT_M</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>T&amp;M Parts</label>
    <nameField>
        <displayFormat>TMP-{00000}</displayFormat>
        <label>T&amp;M Parts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>